--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -2374,11 +2374,11 @@
         "print(notas)"
       ],
       "metadata": {
-        "id": "I2W-DYv7kJ8t",
-        "outputId": "e689cfbf-efb1-4c4f-a64d-87f085cebed8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I2W-DYv7kJ8t",
+        "outputId": "e689cfbf-efb1-4c4f-a64d-87f085cebed8"
       },
       "execution_count": 6,
       "outputs": [
@@ -2412,11 +2412,11 @@
         "notas_separadas"
       ],
       "metadata": {
-        "id": "wk0Fau5vl3T2",
-        "outputId": "ddc10489-1be7-4111-9bf7-478144622fca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wk0Fau5vl3T2",
+        "outputId": "ddc10489-1be7-4111-9bf7-478144622fca"
       },
       "execution_count": 13,
       "outputs": [
@@ -2778,11 +2778,11 @@
         "becados"
       ],
       "metadata": {
-        "id": "kGS0q12SdlfF",
-        "outputId": "45e9c09b-f89c-4ddb-feab-55c4609a2136",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kGS0q12SdlfF",
+        "outputId": "45e9c09b-f89c-4ddb-feab-55c4609a2136"
       },
       "execution_count": 38,
       "outputs": [
@@ -2828,12 +2828,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "alturas = [1.70, 1.80, 1.65, 1.75, 1.90]\n",
+        "pesos = [65, 80, 58, 70, 95]\n",
+        "\n",
+        "imc = [round((peso / altura**2), 1) for altura, peso in zip(alturas, pesos)]\n",
+        "print(imc)"
+      ],
       "metadata": {
-        "id": "YGQIaCzkLGqd"
+        "id": "YGQIaCzkLGqd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10f6c282-d2d8-4f49-83dd-68faeefac32c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[22.5, 24.7, 21.3, 22.9, 26.3]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2945,30 +2963,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres_estudiantes = [\"Enrique Montero\", \"Luna Pereira\", \"Anthony Silva\", \"Leticia Fernandez\", \"Juan González\", \"Maira Caldera\", \"Diana Carvajo\", \"Mariana Rosas\", \"Camila Fernandez\", \"Levi Alves\", \"Nicolás Rocha\", \"Amanda Navas\",  \"Lara Morales\", \"Leticia Olivera\", \"Lucas Navas\", \"Lara Arteaga\", \"Beatriz Martinez\", \"Victor Acevedo\", \"Stephany Hernández\", \"Gustavo Lima\"]\n",
+        "\n",
+        "medias_estudiantes = [5.4, 4.1, 9.1, 5.3, 6.9, 3.1, 9.0, 5.0, 8.2, 5.5, 8.1, 7.4, 5.0, 3.7, 8.1, 6.2, 6.1, 5.6, 10.0, 8.2]"
+      ],
       "metadata": {
         "id": "GuTwYw8NLNST"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "becados = {nombre: media for nombre, media in zip(nombres_estudiantes, medias_estudiantes) if media >= 9}"
+      ],
       "metadata": {
         "id": "Ka1JPCuvLP4x"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "becados"
+      ],
       "metadata": {
-        "id": "4GhlzfLbLP8L"
+        "id": "4GhlzfLbLP8L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d2de9b5a-cd0c-4f7c-d3fb-c698aeafac36"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Anthony Silva': 9.1, 'Diana Carvajo': 9.0, 'Stephany Hernández': 10.0}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3055,26 +3096,75 @@
       "metadata": {
         "id": "UvVbXY0XVm-f"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre = input ('ingrese el nombre del estudiante:')\n",
+        "resultado = notas[nombre]\n",
+        "resultado"
+      ],
       "metadata": {
-        "id": "rFBq02dbJtkF"
+        "id": "rFBq02dbJtkF",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        },
+        "outputId": "a976e19c-aa0b-4298-c8b9-6c4b80e91b08"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ingrese el nombre del estudiante:leo\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "'leo'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-573854cc5594>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnombre\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'ingrese el nombre del estudiante:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mresultado\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnotas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnombre\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mresultado\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'leo'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "try:\n",
+        "  nombre = input ('ingrese el nombre del estudiante:')\n",
+        "  resultado = notas[nombre]\n",
+        "except KeyError as e:\n",
+        "  print('Estudiante no matriculado(a) en el grupo')\n",
+        "else:\n",
+        "  print(resultado)"
+      ],
       "metadata": {
-        "id": "IZwxTL1EJvRl"
+        "id": "IZwxTL1EJvRl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "450b336f-d23b-4e30-e102-06f983e0dba3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ingrese el nombre del estudiante:Leo\n",
+            "Estudiante no matriculado(a) en el grupo\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3113,7 +3203,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "try:\n",
+        "  nombre = input ('ingrese el nombre del estudiante:')\n",
+        "  resultado = notas[nombre]\n",
+        "except KeyError as e:\n",
+        "  print('Estudiante no matriculado(a) en el grupo')\n",
+        "else:\n",
+        "  print(resultado)"
+      ],
       "metadata": {
         "id": "Qr_4-D3UJxcE"
       },
@@ -3169,12 +3267,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "try:\n",
+        "  nombre = input ('ingrese el nombre del estudiante:')\n",
+        "  resultado = notas[nombre]\n",
+        "except KeyError as e:\n",
+        "  print('Estudiante no matriculado(a) en el grupo')\n",
+        "else:\n",
+        "  print(f'las notas del estudiante son: {notas}')\n",
+        "finally:\n",
+        "  print('La consulta ha concluído.')"
+      ],
       "metadata": {
-        "id": "PwdLYP_zJ04s"
+        "id": "PwdLYP_zJ04s",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "061b783a-a6ab-4b80-db2d-a8c8694dab2f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ingrese el nombre del estudiante:Maria\n",
+            "las notas del estudiante son: {'Juan': [8.0, 9.0, 10.0], 'Maria': [9.0, 7.0, 6.0], 'José': [3.4, 7.0, 8.0], 'Claudia': [5.5, 6.6, 8.0], 'Ana': [6.0, 10.0, 9.5], 'Jorge': [5.5, 7.5, 9.0], 'Julia': [6.0, 8.0, 7.0], 'Pedro': [3.0, 4.0, 6.0]}\n",
+            "La consulta ha concluído.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3244,31 +3366,81 @@
         "\n",
         "  calculo = sum(lista) / len(lista)\n",
         "\n",
-        "  return calculo"
+        "  if len(lista) > 4:\n",
+        "    raise ValueError('La lista no puede poseer mas de 4 notas')\n",
+        "\n",
+        "  return calculo\n"
       ],
       "metadata": {
         "id": "kKeFuHUfhSfa"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas = [8.0, 9.0, 10.0, 9.5,7]\n",
+        "resultado = promedio(notas)\n",
+        "resultado"
+      ],
       "metadata": {
-        "id": "_ghW6hb9KBpU"
+        "id": "_ghW6hb9KBpU",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        },
+        "outputId": "e164baf8-d38e-4a4e-fb14-2325855483b4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "La lista no puede poseer mas de 4 notas",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-40-19287a61506c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnotas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m8.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mresultado\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpromedio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mresultado\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-39-5a58b015ab26>\u001b[0m in \u001b[0;36mpromedio\u001b[0;34m(lista)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'La lista no puede poseer mas de 4 notas'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mcalculo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: La lista no puede poseer mas de 4 notas"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "try:\n",
+        "  notas = [8.0, 9.0, 10.0, 9.0, 7]\n",
+        "  resultado = promedio(notas)\n",
+        "except TypeError:\n",
+        "  print('No fue posible calcular el promedio del(la) estudiante. Solo se admiten valores numéricos!')\n",
+        "except ValueError as e:\n",
+        "  print(e)\n",
+        "else:\n",
+        "  print(f'El promedio del estudiante es: {resultado}')\n",
+        "finally:\n",
+        "  print('La consulta ha concluído.')\n"
+      ],
       "metadata": {
-        "id": "X2To8kJdKGFk"
+        "id": "X2To8kJdKGFk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "253fd1b9-a61b-4578-e44c-685c6cef80fc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La lista no puede poseer mas de 4 notas\n",
+            "La consulta ha concluído.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
